--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.paypal.com/sdk/js?client-id=Aa6H-TzSPLAObN8uHq_zZ8OgBLQoAx67Q2RDUO_3UB4vQofUC8A8LNpeBZbKon60qQjDlAfqb9-7pi5w"></script>
   </body>
 </html>
